#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-15
2013-03-20 Andy Salnikov
- HDF5: switching to non-compound datasets

Tag: V00-05-14
2013-03-19 Andy Salnikov
- few updates for HDF5 generator

Tag: V00-05-13
2013-03-15 Andy Salnikov
- few HDF5-related changes

Tag: V00-05-12
2013-03-13 Andy Salnikov
- more HDF5 development:
  - more vlen improvements
  - char types of rank-1 are now vlen by default
  - skip-proxy tag added

Tag: V00-05-11
2013-03-12 Andy Salnikov
- more progress on HDF5 generator, vlen arrays should work better now

Tag: V00-05-10
2013-03-10 Andy Salnikov
- adding new backend for HDF5 dispatch code
- small fixes for HDF5 backend

Tag: V00-05-09
2013-03-07 Andy Salnikov
- refactoring of DdlHdf5Data, moved piece of stuff to DdlHdf5DataHelpers
- initial implementation for array datasets, compiles, not tested

Tag: V00-05-08
2013-03-04 Andy Salnikov
- removed Id_QuartzConfig from ignored types
- order cases in switch by name, will be easier to track changes

Tag: V00-05-07
2013-03-04 Andy Salnikov
- more progress on HDF5 generator
- new backend pds2psana-dispatch which generates typeid-dispatch code

Tag: V00-05-06
2013-03-02 Andy Salnikov
- in python generator add boost/python.hpp include at the top of generated
  files to suppress compilation warnings about redefined macros

Tag: V00-05-05
2013-02-26 Andy Salnikov
- small improvements for HDF5 generation

Tag: V00-05-04
2013-02-26 Andy Salnikov
- continuing work on HDF5 code generation
- re-working constuctor stuff, need more flexible mapping of methods 
  to constructor arguments

Tag: V00-05-03
2013-02-12 Andy Salnikov